--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "pythonia": "^1.2.1",
     "react": "^18.3.1",
     "react-activity": "^2.1.3",
+    "react-currency-input-field": "^3.8.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
