--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "next-themes": "^0.3.0",
     "nock": "^13.5.4",
     "novel": "^0.4.3",
+    "onborda": "^1.2.2",
     "pg": "^8.12.0",
     "pure": "link:@stripe/connect-js/pure",
     "pythonia": "^1.2.1",
