--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@react-email/components": "^0.0.22",
     "@segment/analytics-next": "^1.72.1",
     "@segment/analytics-node": "^2.1.2",
+    "@servicebell/widget": "^0.1.6",
     "@stripe/react-connect-js": "^3.3.12",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.4",
